--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="flex items-centre justify-between">
                 <div class="left flex justfiy-right">
                     <div class="logo">
-                        <img src="D:\NIFT\Sem 6\personal branding\namrrata full-12.png" width="130px" alt="logo">
+                        <img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\namrrata full-12.png" width="130px" alt="logo">
                     </div>
                     <div>
                         <a href="trial2.html">Home</a>
@@ -37,7 +37,7 @@
     </header>
     <div class="hero flex items-centre justify-between">
         <div class="left flex-1 justify-center">
-            <img src="D:\NIFT\Sem 6\personal branding\lgopic-17.png" width="500px" alt="Profile">
+            <img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\lgopic-17.png" width="500px" alt="Profile">
         </div>
         <div class="right flex-1">
             <h6>Hello</h6>
@@ -55,7 +55,7 @@
     <section class="about">
         <div class="container flex items-centre">
             <div class="left flex-1 justify-right">
-                <img src="C:\Users\NAMRRATA S\OneDrive\Desktop\namrrata.jpeg" height="400px" alt="profile pic">
+                <img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\namrrata.jpeg" height="400px" alt="profile pic">
             </div>
             <div class="right flex-1">
                 <h1>About Me</h1>
@@ -70,7 +70,7 @@
                     <a href="#"><img src="D:\NIFT\Sem 6\web development\trial2\whaticon.png" width="40px"></a>
                     <a href="#"><img src="D:\NIFT\Sem 6\web development\trial2\download-removebg-preview (6).png" width="40px"></a>
                     <a href="#"><img src="D:\NIFT\Sem 6\web development\trial2\download-removebg-preview (7).png" width="30px"></a>
-                    <a href="#"><img src="D:\NIFT\Sem 6\web development\trial2\download-removebg-preview (8).png" width="60px"></a>
+                    <a href="#"><img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\download-removebg-preview (8).png" width="60px"></a>
                 </div>
             </div>
         </div>
@@ -81,17 +81,17 @@
             <p>My projects done during college days.</p>
             <div class="card-grid">
                 <div class="card">
-                    <img src="D:\PORTFOLIO\personal branding\projecttt-19.jpg">
+                    <img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\projecttt-19.jpg">
                     <h2>Personal Branding</h2>
                     <p>In my personal branding project, I crafted an identity that truly reflects who I am. By incorporating a side face of a woman into the letter 'n' of my name, I convey my feminine strength and individuality. The choice of dark grey, pink, and blue hues mirrors my personality unapologetically feminine, confidently bold, and effortlessly chic. </p>
                 </div>
                 <div class="card">
-                    <img src="D:\NIFT\Sem 4\Publication Design\bookffffffffffff4.jpg">
+                    <img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\bookffffffffffff4.jpg">
                     <h2>Publication Design</h2>
                     <p>In my publication design project, I crafted a visually captivating book guide for styling. I focused on creating layouts that draw the reader in with their uniqueness, ensuring each page had a clear hierarchy of information. By combining interesting layouts, clear hierarchy, and clear imagery, I aimed to create a book that inspires the reader to know about styling with enthusiasm.</p>
                 </div>
                 <div class="card">
-                    <img src="D:\NIFT\Sem 6\ui ux\claims\Desktop - 18.jpg">
+                    <img src="D:\NIFT\Sem 6\web development\trial2\IMAGES\Desktop - 18.jpg">
                     <h2>UI UX Case Study</h2>
                     <p>In my UI/UX project, I redesigned the CLAIMS portal on our college HR website. This portal is crucial for faculty members to streamline their reimbursement process. The existing system is a hassle—it's slow, complicated, and tracking claims is like searching for a needle in a haystack. My redesign aims to make submitting, tracking, and managing claims easier.</p>
                 </div>
